fixed spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -238,7 +238,7 @@ em {
   }
 
   .fullscreen--center {
-    min-height: 100vh;
+    min-height: 90vh;
     justify-content: center;
   }
 
